ReadMe file added

--- a/Resources/Global.properties
+++ b/Resources/Global.properties
@@ -1,5 +1,6 @@
 Browser =Google Chrome
 WebpageURL =http://automationpractice.com/index.php
+DriverPath =C:\\Users\\lenovo\\eclipse-workspace\\AutomationPractice\\Drivers\\chromedriver_win32\\chromedriver.exe
 
 ExpcetedTitleOnPageLoad =My Store
 RegistrationURLPagetitle =Login - My Store
